Ajout des vues lors de la création de contrôleurs.

--- a/src/commands/controller/ControllerController.js.hbs
+++ b/src/commands/controller/ControllerController.js.hbs
@@ -5,3 +5,6 @@ class {{ pascalCase controllerName }}Controller
 			this.{{ camelCase controllerName }}Model = new {{ pascalCase controllerName }}Model();
 		}
 }
+
+
+window.{{camelCase controllerName}}Controller = new {{ pascalCase controllerName }}Controller();
