Possibilité de réaliser des associations. Les scripts d'installations ont été améliorés.

--- a/src/commands/routes/route.model.js.hbs
+++ b/src/commands/routes/route.model.js.hbs
@@ -1,6 +1,8 @@
 const { DataTypes } = require( "sequelize" );
 const { sequelize } = require( "./db" );
 
+// MAWORK CLI AJOUT IMPORT NE PAS TOUCHER
+
 const {{pascalCase routeName}} = sequelize.define(
 	"{{pascalCase routeName}}",
 	{
@@ -11,5 +13,7 @@ const {{pascalCase routeName}} = sequelize.define(
 		}
 	}
 );
+
+// MAWORK CLI AJOUT ASSOCIATIONS NE PAS TOUCHER
 
 module.exports = {{pascalCase routeName}};
