--- a/src/commands/controller/ControllerController.js.hbs
+++ b/src/commands/controller/ControllerController.js.hbs
@@ -1,3 +1,5 @@
+import BaseController from "./baseController";
+
 class {{ pascalCase controllerName }}Controller
 	extends BaseController {
 		constructor() {
