--- a/src/commands/controller/ControllerController.js.hbs
+++ b/src/commands/controller/ControllerController.js.hbs
@@ -1,4 +1,4 @@
-import BaseController from "./baseController";
+import BaseController from "./baseController.js";
 
 class {{ pascalCase controllerName }}Controller
 	extends BaseController {
