Création de routes GET /, POST /, PUT /, DELETE / lors de la création de routes et lors de la création du model et de l'API, les méthodes correspondantes sont générées.

--- a/src/commands/controller/ControllerApi.js.hbs
+++ b/src/commands/controller/ControllerApi.js.hbs
@@ -3,4 +3,52 @@ class {{ pascalCase controllerName }}Api {
 		this.api   = "http://127.0.0.1:3000/{{ lowerCase controllerName }}";
 		this.token = window.sessionStorage.getItem( "token" );
 	}
+
+    getAll{{ pascalCase controllerName }} () {
+        return fetchJSON(
+            this.api,
+            methods.get,
+            "/{{ camelCase controllerName }}",
+            this.token
+        );
+    }
+
+    getOne{{ pascalCase controllerName }} () {
+        return fetchJSON(
+            this.api,
+            methods.get,
+            "",
+            this.token
+        );
+    }
+
+    post{{ pascalCase controllerName }} (body) {
+        return fetchJSON(
+            this.api,
+            methods.post,
+            "",
+            this.token,
+            body
+        );
+    }
+
+    update{{ pascalCase controllerName }} (body) {
+        return fetchJSON(
+            this.api,
+            methods.put,
+            "",
+            this.token,
+            body
+        );
+    }
+
+    delete{{ pascalCase controllerName }} (body) {
+        return fetchJSON(
+            this.api,
+            methods.delete,
+            "",
+            this.token,
+            body
+        );
+    }
 }
