--- a/src/commands/routes/route.model.js.hbs
+++ b/src/commands/routes/route.model.js.hbs
@@ -10,7 +10,8 @@ const {{pascalCase routeName}} = sequelize.define(
 			primaryKey   : true,
 			type         : DataTypes.UUID,
 			defaultValue : DataTypes.UUIDV4
-		}
+		},
+        // MAWORK CLI AJOUT CHAMP NE PAS TOUCHER
 	}
 );
 
