Modification pour la méthode /delete lors de la génération des routes. Ajout de la possibilité de laisser une contrainte d'unicité au champ d'une entité.

--- a/src/commands/routes/route.routes.js.hbs
+++ b/src/commands/routes/route.routes.js.hbs
@@ -70,7 +70,7 @@ router.delete(
         req,
         res
     ) => {
-        {{ pascalCase routeName }}.delete(
+        {{ pascalCase routeName }}.destroy(
             where : {
                 id : req.body.id
             }
