Ajout de l'option tableName dans les models et correction d'un oubli de virgule dans les templates

--- a/src/commands/routes/route.model.js.hbs
+++ b/src/commands/routes/route.model.js.hbs
@@ -12,6 +12,9 @@ const {{pascalCase routeName}} = sequelize.define(
 			defaultValue : DataTypes.UUIDV4
 		},
         // MAWORK CLI AJOUT CHAMP NE PAS TOUCHER
+	},
+	{
+		tableName: "{{pascalCase routeName}}"
 	}
 );
 
