Mise à jour de la route par défaut permettant de n'avoir qu'une fois l'entité. Mise à jour dans le model et l'API pour suivre en conséquence.

--- a/src/commands/controller/ControllerApi.js.hbs
+++ b/src/commands/controller/ControllerApi.js.hbs
@@ -18,7 +18,7 @@ class {{ pascalCase controllerName }}Api {
         );
     }
 
-    getOne{{ pascalCase controllerName }} () {
+    getOne{{ pascalCase controllerName }} (body) {
         return fetchJSON(
             this.api,
             methods.post,
